--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/public/styles.css" />
   <title>Interior Design</title>
-  <style>
-    header {
-      /* position: fixed; */
-    }
-  </style>
+  <link rel="shortcut icon" href="imgs/p.png" type="image/x-icon">
 </head>
 
 <body class="mb-super w-full font-Montserrat overflow-x-hidden p-0 m-0">
@@ -204,31 +200,46 @@
         </div>
       </div>
     </section>
-    <section>
-      <div>
-        <img class="inline-block" src="../public/imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg"
-          alt="" srcset="">
-      </div>
-      <div>
-        <img class="inline-block" src="../public/imgs/FVG.jpg" alt="">
-      </div>
-      <div>
-        <p>Interior Studio</p>
-        <p>Elit ut aliquam purus sit amet luctus venenatis. Ridiculus mus mauris vitae ultricies leo integer malesuada.
+    <section class="p-40 text-center">
+      <img
+        class="border-white border-[15px] shadow-md inline-block w-[500px] h-[600px] relative left-[400px] bottom-[200px] z-10"
+        src="../public/imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
+      <img class="inline-block w-[350px] shadow-md border-white border-[15px] relative z-20 right-[330px] top-[100px]"
+        src="../public/imgs/FVG.jpg" alt="">
+      <div class="inline-block bg-gray-100 relative shadow-md top-[100px] text-start px-20 py-32 w-[450px]">
+        <p class="font-bold text-4xl mb-10">Interior Studio</p>
+        <p class=" text-gray-500">Elit ut aliquam purus sit amet luctus venenatis. Ridiculus mus mauris vitae
+          ultricies leo
+          integer malesuada.
           Massa enim nec dui nunc mattis enim. Sagittis vitae et leo duis ut. Lacus suspendisse faucibus interdum.
         </p>
-        <button>LEARN MORE</button>
+        <button
+          class="border-black border px-4 py-3 mt-10 hover:text-white hover:bg-black duration-300 ease-in-out font-bold text-xl ">LEARN
+          MORE</button>
       </div>
     </section>
-    <section>
-      <img class="w-[25%] h-[450px] object-cover object-bottom float-left  inline-block"
-        src="../public/imgs/pexels-photo-4142982.jpeg" alt="" srcset="">
-      <img class="w-[25%] h-[450px] object-cover object-bottom float-left  inline-block"
-        src="../public/imgs/pexels-photo-4207892.jpeg" alt="" srcset="">
-      <img class="w-[25%] h-[450px] object-cover object-bottom float-left  inline-block"
-        src="../public/imgs/pexels-photo-905198.jpeg" alt="" srcset="">
-      <img class="w-[25%] h-[450px] object-cover object-bottom float-left  inline-block"
-        src="../public/imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
+    <section class="overflow-hidden">
+      <div class="w-[25%] h-[450px] float-left ease-in-out relative">
+        <img class="w-full object-cover object-bottom" src="../public/imgs/pexels-photo-4142982.jpeg" alt="" srcset="">
+        <div class="absolute top-0 h-full w-full left-0 bg-[rgba(0, 0, 0,0.9)] z-20 duration-300 hover:cursor-pointer">
+        </div>
+      </div>
+      <div class="w-[25%] h-[450px] float-left ease-in-out relative">
+        <img class="w-full object-cover object-bottom" src="../public/imgs/pexels-photo-4207892.jpeg" alt="" srcset="">
+        <div class="absolute top-0 h-full w-full left-0 bg-[rgba(0, 0, 0,0.9)] z-20 duration-300 hover:cursor-pointer">
+        </div>
+      </div>
+      <div class="w-[25%] h-[450px] float-left ease-in-out relative">
+        <img class="w-full object-cover object-bottom" src="../public/imgs/pexels-photo-905198.jpeg" alt="" srcset="">
+        <div class="absolute top-0 h-full w-full left-0 bg-[rgba(0, 0, 0,0.9)] z-20 duration-300 hover:cursor-pointer">
+        </div>
+      </div>
+      <div class="w-[25%] h-[450px] float-left ease-in-out relative">
+        <img class="w-full object-cover object-bottom"
+          src="../public/imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
+        <div class="absolute top-0 h-full w-full left-0 bg-[rgb(0, 0, 0)]  z-20 duration-300 hover:cursor-pointer">
+        </div>
+      </div>
     </section>
   </main>
   <script src="main.js"></script>
