--- a/public/index.html
+++ b/public/index.html
@@ -237,7 +237,8 @@
       <div class="w-[25%] h-[450px] float-left ease-in-out relative">
         <img class="w-full object-cover object-bottom"
           src="../public/imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
-        <div class="absolute top-0 h-full w-full left-0 bg-[rgb(0, 0, 0)]  z-20 duration-300 hover:cursor-pointer">
+        <div
+          class="absolute top-0 h-full w-full left-0 bg-[rgba(0, 0, 0,0.9)] bg-black z-20 duration-300 hover:cursor-pointer">
         </div>
       </div>
     </section>
