--- a/public/index.html
+++ b/public/index.html
@@ -386,7 +386,7 @@
       </tr>
     </table>
   </footer>
-  <script src="main.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
