--- a/public/index.html
+++ b/public/index.html
@@ -147,19 +147,24 @@
     </section>
     <section class="grid grid-cols-1 lg:grid-cols-2 lg:px-72 lg:py-8">
       <div class="py-8 px-8 bg-red relative flex justify-center items-center">
-        <div class="z-10 "><img class="shadow-md h-[450px] w-[300px]  lg:w-[450px] lg:h-[550px]" src="./imgs/gh.jpg"
-            alt="">
+        <div class="z-10 "><img
+            class="relative bottom-[500px] opacity-0 duration-1000 ease-in-out shadow-md h-[450px] w-[300px]  lg:w-[450px] lg:h-[550px]"
+            src="./imgs/gh.jpg" alt="">
         </div>
         <div
-          class="absolute top-36 right-36 w-[250px] h-[350px] lg:right-60 lg:bottom-44 z-5 bg-[#d9d9d9] lg:w-[350px] lg:h-[450px]">
+          class="section-2-left absolute top-36 right-36 w-[250px] h-[350px] lg:right-[900px] duration-1000 ease-in-out opacity-0 lg:bottom-44 z-5 bg-[#d9d9d9] lg:w-[350px] lg:h-[450px]">
         </div>
         <div
-          class="absolute bottom-36 left-36 w-[250px] h-[350px] lg:left-60 lg:top-36 z-5 bg-[#b1c08b] lg:w-[350px] lg:h-[400px]">
+          class="section-2-right absolute bottom-36 left-36 w-[250px] h-[350px] duration-1000 ease-in-out lg:left-[900px] opacity-0 lg:top-36 z-5 bg-[#b1c08b] lg:w-[350px] lg:h-[400px]">
         </div>
       </div>
       <div class="py-8 px-8 lg:pr-16 lg:py-24 lg:px-8">
-        <p class=" lg:mb-5 lg:pt-5 mb-2 text-2xl font-bold lg:text-2xl">We focus on ensuring a competitive edge and
-          strive to make the building process a positive experience for our clients.</p>
+        <h3
+          class="relative bottom-[200px] duration-1000 ease-in-out opacity-0 lg:mb-5 lg:pt-5 mb-2 text-2xl font-bold lg:text-2xl">
+          We focus on ensuring a
+          competitive edge
+          and
+          strive to make the building process a positive experience for our clients.</h3>
         <p class="font-light text-xl">We focus on ensuring a competitive edge and strive to make the building process a
           positive
           experience for our clients.
@@ -174,17 +179,18 @@
     </section>
     <section class="grid grid-cols-1 lg:grid-cols-2 lg:px-64 lg:py-20 relative">
       <div
-        class="absolute lg:top-32 lg:right-96 w-[150px] h-[150px] top-[-50px] right-2 lg:w-[250px] lg:h-[250px] z-5 rounded-full bg-[#d9d9d9]">
+        class="absolute lg:top-32 lg:right-[-900] w-[150px] h-[150px] duration-1000 ease-in-out opacity-1 section-3-top top-[-50px] right-2 lg:w-[250px] lg:h-[250px] z-5 rounded-full bg-[#d9d9d9]">
       </div>
       <div
-        class="absolute  w-[300px] bottom-64 right-36 h-[100px] lg:bottom-16 lg:right-96 lg:w-[700px] lg:h-[250px] z-5 bg-[#b1c08b]">
+        class="absolute  w-[300px] bottom-64 right-36 h-[100px] section-3-bottom duration-1000 ease-in-out opacity-0 lg:bottom-[-900px] lg:right-96 lg:w-[700px] lg:h-[250px] z-5 bg-[#b1c08b]">
       </div>
       <div class="flex justify-center items-center relative lg:block z-10  lg:left-40 col-span-2 ">
-        <img class="shadow-md  h-[450px] w-[350px] lg:h-[650px] lg:w-[700px]  object-cover " src="./imgs/FVG.jpg"
-          alt="">
+        <img
+          class="shadow-md relative right-[900px] duration-1000 ease-in-out opacity-0  h-[450px] w-[350px] lg:h-[650px] lg:w-[700px]  object-cover "
+          src="./imgs/FVG.jpg" alt="">
       </div>
       <div
-        class="lg:absolute flex justify-center items-start flex-col z-20 lg:top-52 lg:right-[480px] py-8 px-8 lg:w-[500px] lg:h-[480px]   lg:px-16 bg-white shadow-md">
+        class="section-3-card relative duration-1000 opacity-0 ease-in-out lg:absolute flex justify-center items-start flex-col z-20 lg:top-52 lg:right-[-420px] py-8 px-8 lg:w-[500px] lg:h-[480px]   lg:px-16 bg-white shadow-md">
         <h4 class="lg:text-3xl lg:mb-5  font-bold ">Real-time Visualization</h4>
         <p class="font-light">Experience real-time visualization like never before. Our cutting-edge technology allows
           you to explore your visions with unparalleled clarity and precision.
