--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
           </svg>
         </li>
         <ul class="menu fixed  top-0 right-[-256] ease-in-out duration-500 bg-white shadow-md  p-20 text-2xl">
-          <img class="close absolute cursor-pointer top-5 right-5 w-5" src="imgs/close.png" alt="">
+          <img loading="lazy" class="close absolute cursor-pointer top-5 right-5 w-5" src="imgs/close.png" alt="">
           <li>
             <a href="https://www.linkedin.com/in/abdelrhman-abdelmoaty/" target="_blank"
               class="hover:opacity-80">Home</a>
@@ -210,17 +210,17 @@
         innovative workplace interiors</p>
       <div class="lg:ml-auto lg:w-[840px] flex lg:flex-row flex-col justify-between items-center lg:py-0 py-5 gap-y-5">
         <div class="flex flex-col gap-y-4 items-center text-center lg:w-[270px] shadow-lg bg-white px-10 py-14 ">
-          <img class="w-24 " src="../public/imgs/kitchen-table.png" alt="" srcset="">
+          <img loading="lazy" class="w-24 " src="../public/imgs/kitchen-table.png" alt="" srcset="">
           <p class="font-bold">PROJECTS</p>
           <p class="text-gray-500">Embarking on a Journey of Artistry, Innovation, and Excellence in Design.</p>
         </div>
         <div class="flex flex-col gap-y-4 items-center text-center lg:w-[270px] shadow-lg bg-white px-10 py-14 ">
-          <img class="w-24 " src="../public/imgs/interior-design.png" alt="" srcset="">
+          <img loading="lazy" class="w-24 " src="../public/imgs/interior-design.png" alt="" srcset="">
           <p class="font-bold">GREATE DESIGN</p>
           <p class="text-gray-500">Setting the Standard for Creative Excellence, Innovation, and Elegance.</p>
         </div>
         <div class="flex flex-col gap-y-4 items-center text-center lg:w-[270px] shadow-lg bg-white px-10 py-14 ">
-          <img class="w-24 " src="../public/imgs/kitchen-table.png" alt="" srcset="">
+          <img loading="lazy" class="w-24 " src="../public/imgs/kitchen-table.png" alt="" srcset="">
           <p class="font-bold">HOME DECOR</p>
           <p class="text-gray-500">Revitalizing Living Spaces with Elegance, Comfort, and Personalized Style.</p>
         </div>
@@ -246,28 +246,28 @@
     </section>
     <section class="overflow-hidden">
       <div class="w-[25%] lg:h-[450px] float-left relative">
-        <img class="w-full object-cover object-bottom  h-[450px]" src="../public/imgs/pexels-photo-4142982.jpeg" alt=""
-          srcset="">
+        <img loading="lazy" class="w-full object-cover object-bottom  h-[450px]"
+          src="../public/imgs/pexels-photo-4142982.jpeg" alt="" srcset="">
         <div
           class="absolute top-0 h-full w-full left-0 hover:bg-opacity-40 hover:bg-[#000]  z-20 duration-300 ease-in-out hover:cursor-pointer">
         </div>
       </div>
       <div class="w-[25%] lg:h-[450px] float-left relative">
-        <img class="w-full object-cover object-bottom  h-[450px]" src="../public/imgs/pexels-photo-4207892.jpeg" alt=""
-          srcset="">
+        <img loading="lazy" class="w-full object-cover object-bottom  h-[450px]"
+          src="../public/imgs/pexels-photo-4207892.jpeg" alt="" srcset="">
         <div
           class="absolute top-0 h-full w-full left-0 hover:bg-opacity-40 hover:bg-[#000]  z-20 duration-300 ease-in-out hover:cursor-pointer">
         </div>
       </div>
       <div class="w-[25%]   lg:h-[450px] float-left relative">
-        <img class="w-full h-[450px] object-cover object-bottom" src="../public/imgs/pexels-photo-905198.jpeg" alt=""
-          srcset="">
+        <img loading="lazy" class="w-full h-[450px] object-cover object-bottom"
+          src="../public/imgs/pexels-photo-905198.jpeg" alt="" srcset="">
         <div
           class="absolute top-0 h-full w-full left-0 hover:bg-opacity-40 hover:bg-[#000]  z-20 duration-300 ease-in-out hover:cursor-pointer">
         </div>
       </div>
       <div class="w-[25%] lg:h-[450px] float-left relative">
-        <img class="w-full  object-cover object-bottom h-[450px]"
+        <img loading="lazy" class="w-full  object-cover object-bottom h-[450px]"
           src="../public/imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
         <div
           class="absolute top-0 h-full w-full left-0 hover:bg-opacity-40 hover:bg-[#000]  z-20 duration-300 ease-in-out hover:cursor-pointer">
@@ -284,22 +284,22 @@
       <div
         class="absolute lg:w-[514px] flex flex-col items-center justify-center w-full lg:flex-row lg:flex-wrap lg:top-[250px] lg:left-[350px]">
         <div class="projects shadow-md bg-[#b1c08b] flex flex-col items-center w-[300px] lg:w-[225px] m-4 p-12">
-          <img class="w-[100px] h-[100px]" src="./imgs/project-management.png" alt="" srcset="">
+          <img loading="lazy" class="w-[100px] h-[100px]" src="./imgs/project-management.png" alt="" srcset="">
           <p class="font-bold text-2xl">PROJECTS</p>
           <p class="count font-extrabold text-4xl">100</p>
         </div>
         <div class="clients shadow-md bg-[#b1c08b] flex flex-col items-center w-[300px] lg:w-[225px] m-4 p-12">
-          <img class="w-[100px] h-[100px]" src="./imgs/rating.png" alt="" srcset="">
+          <img loading="lazy" class="w-[100px] h-[100px]" src="./imgs/rating.png" alt="" srcset="">
           <p class="font-bold text-2xl">PROJECTS</p>
           <p class="count font-extrabold text-4xl">100</p>
         </div>
         <div class="team shadow-md bg-[#b1c08b] flex flex-col items-center w-[300px] lg:w-[225px] m-4 p-12">
-          <img class="w-[100px] h-[100px]" src="./imgs/group.png" alt="" srcset="">
+          <img loading="lazy" class="w-[100px] h-[100px]" src="./imgs/group.png" alt="" srcset="">
           <p class="font-bold text-2xl">PROJECTS</p>
           <p class="count font-extrabold text-4xl">100</p>
         </div>
         <div class="awards shadow-md bg-[#b1c08b] flex flex-col items-center w-[300px] lg:w-[225px] m-4 p-12">
-          <img class="w-[100px] h-[100px]" src="./imgs/award.png" alt="" srcset="">
+          <img loading="lazy" class="w-[100px] h-[100px]" src="./imgs/award.png" alt="" srcset="">
           <p class="font-bold text-2xl">PROJECTS</p>
           <p class="count font-extrabold text-4xl">100</p>
         </div>
