--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
           </svg>
         </li>
         <ul class="menu fixed  top-0 right-[-256] ease-in-out duration-500 bg-white shadow-md  p-20 text-2xl">
-          <img loading="lazy" class="close absolute cursor-pointer top-5 right-5 w-5" src="imgs/close.png" alt="">
+          <img class="close absolute cursor-pointer top-5 right-5 w-5" src="imgs/close.png" alt="">
           <li>
             <a href="https://www.linkedin.com/in/abdelrhman-abdelmoaty/" target="_blank"
               class="hover:opacity-80">Home</a>
@@ -138,10 +138,10 @@
             src="./imgs/fdf.jpg" alt="">
         </div>
         <div
-          class="section-1-left absolute top-36 right-36 w-[250px] h-[350px] lg:right-[900px] opacity-0 duration-1000 ease-in-out lg:top-52 z-5 bg-[#b1c08b] lg:w-[350px] lg:h-[450px]">
+          class="section-1-left absolute top-36 right-36 w-[250px] h-[350px] lg:right-[200px] opacity-0 duration-1000 ease-in-out lg:top-52 z-5 bg-[#b1c08b] lg:w-[350px] lg:h-[450px]">
         </div>
         <div
-          class="section-1-right absolute bottom-36 left-36 w-[250px] h-[350px] duration-1000 ease-in-out  opacity-0 lg:left-[900px] lg:bottom-[144px] z-0 bg-[#d9d9d9] lg:w-[350px] lg:h-[400px]">
+          class="section-1-right absolute bottom-36 left-36 w-[250px] h-[350px] duration-1000 ease-in-out  opacity-0 lg:left-[200px] lg:bottom-[144px] z-0 bg-[#d9d9d9] lg:w-[350px] lg:h-[400px]">
         </div>
       </div>
     </section>
@@ -152,10 +152,10 @@
             src="./imgs/gh.jpg" alt="">
         </div>
         <div
-          class="section-2-left absolute top-36 right-36 w-[250px] h-[350px] lg:right-[900px] duration-1000 ease-in-out opacity-0 lg:bottom-44 z-5 bg-[#d9d9d9] lg:w-[350px] lg:h-[450px]">
+          class="section-2-left absolute top-36 right-36 w-[250px] h-[350px] lg:right-[200px] duration-1000 ease-in-out opacity-0 lg:bottom-44 z-5 bg-[#d9d9d9] lg:w-[350px] lg:h-[450px]">
         </div>
         <div
-          class="section-2-right absolute bottom-36 left-36 w-[250px] h-[350px] duration-1000 ease-in-out lg:left-[900px] opacity-0 lg:top-36 z-5 bg-[#b1c08b] lg:w-[350px] lg:h-[400px]">
+          class="section-2-right absolute bottom-36 left-36 w-[250px] h-[350px] duration-1000 ease-in-out lg:left-[200px] opacity-0 lg:top-36 z-5 bg-[#b1c08b] lg:w-[350px] lg:h-[400px]">
         </div>
       </div>
       <div class="py-8 px-8 lg:pr-16 lg:py-24 lg:px-8">
@@ -179,14 +179,14 @@
     </section>
     <section class="grid grid-cols-1 lg:grid-cols-2 lg:px-64 lg:py-20 relative">
       <div
-        class="absolute lg:top-32 lg:right-[-900] w-[150px] h-[150px] duration-1000 ease-in-out opacity-1 section-3-top top-[-50px] right-2 lg:w-[250px] lg:h-[250px] z-5 rounded-full bg-[#d9d9d9]">
+        class="absolute lg:top-32 lg:right-[-200] w-[150px] h-[150px] duration-1000 ease-in-out opacity-1 section-3-top top-[-50px] right-2 lg:w-[250px] lg:h-[250px] z-5 rounded-full bg-[#d9d9d9]">
       </div>
       <div
-        class="absolute  w-[300px] bottom-64 right-36 h-[100px] section-3-bottom duration-1000 ease-in-out opacity-0 lg:bottom-[-900px] lg:right-96 lg:w-[700px] lg:h-[250px] z-5 bg-[#b1c08b]">
+        class="absolute  w-[300px] bottom-[0] right-36 h-[100px] section-3-bottom duration-1000 ease-in-out opacity-0 lg:bottom-[-200px] lg:right-96 lg:w-[700px] lg:h-[250px] z-5 bg-[#b1c08b]">
       </div>
       <div class="flex justify-center items-center relative lg:block z-10  lg:left-40 col-span-2 ">
         <img
-          class="shadow-md relative right-[900px] duration-1000 ease-in-out opacity-0  h-[450px] w-[350px] lg:h-[650px] lg:w-[700px]  object-cover "
+          class="shadow-md relative right-[200px] duration-1000 ease-in-out opacity-0  h-[450px] w-[350px] lg:h-[650px] lg:w-[700px]  object-cover "
           src="./imgs/FVG.jpg" alt="">
       </div>
       <div
@@ -203,24 +203,30 @@
     </section>
     <section
       class="bg-[url('../public/imgs/fgfgfg.jpg')] bg-cover bg-left lg:bg-center bg-no-repeat flex flex-col p-10 lg:px-56 lg:py-40 lg:h-[900px] ">
-      <p class="lg:ml-auto lg:w-[840px] lg:mb-16 lg:text-4xl text-2xl font-bold">​We design & deliver beautiful hotels,
+      <p
+        class="duration-1000 ease-in-out opacity-0 bottom-[200px] relative  lg:ml-auto lg:w-[840px] lg:mb-16 lg:text-4xl text-2xl font-bold">
+        ​We design & deliver beautiful hotels,
         luxury
         homes
         and
         innovative workplace interiors</p>
-      <div class="lg:ml-auto lg:w-[840px] flex lg:flex-row flex-col justify-between items-center lg:py-0 py-5 gap-y-5">
-        <div class="flex flex-col gap-y-4 items-center text-center lg:w-[270px] shadow-lg bg-white px-10 py-14 ">
-          <img loading="lazy" class="w-24 " src="../public/imgs/kitchen-table.png" alt="" srcset="">
+      <div
+        class="lg:ml-auto h[360px] lg:w-[840px] flex lg:flex-row flex-col justify-between items-center lg:py-0 py-5 gap-y-5">
+        <div
+          class="card overflow-hidden  duration-300 ease-in-out opacity-0 h-0 flex flex-col gap-y-4 items-center text-center lg:w-[270px] shadow-lg bg-white px-10 py-14 ">
+          <img class="w-24 " src="../public/imgs/kitchen-table.png" alt="" srcset="">
           <p class="font-bold">PROJECTS</p>
           <p class="text-gray-500">Embarking on a Journey of Artistry, Innovation, and Excellence in Design.</p>
         </div>
-        <div class="flex flex-col gap-y-4 items-center text-center lg:w-[270px] shadow-lg bg-white px-10 py-14 ">
-          <img loading="lazy" class="w-24 " src="../public/imgs/interior-design.png" alt="" srcset="">
+        <div
+          class="card delay-300 overflow-hidden  duration-300 ease-in-out opacity-0 h-0 flex flex-col gap-y-4 items-center text-center lg:w-[270px] shadow-lg bg-white px-10 py-14 ">
+          <img class="w-24 " src="../public/imgs/interior-design.png" alt="" srcset="">
           <p class="font-bold">GREATE DESIGN</p>
           <p class="text-gray-500">Setting the Standard for Creative Excellence, Innovation, and Elegance.</p>
         </div>
-        <div class="flex flex-col gap-y-4 items-center text-center lg:w-[270px] shadow-lg bg-white px-10 py-14 ">
-          <img loading="lazy" class="w-24 " src="../public/imgs/kitchen-table.png" alt="" srcset="">
+        <div
+          class="card delay-700 overflow-hidden  duration-300 ease-in-out opacity-0 h-0 flex flex-col gap-y-4 items-center text-center lg:w-[270px] shadow-lg bg-white px-10 py-14 ">
+          <img class="w-24 " src="../public/imgs/kitchen-table.png" alt="" srcset="">
           <p class="font-bold">HOME DECOR</p>
           <p class="text-gray-500">Revitalizing Living Spaces with Elegance, Comfort, and Personalized Style.</p>
         </div>
@@ -246,29 +252,28 @@
     </section>
     <section class="overflow-hidden">
       <div class="w-[25%] lg:h-[450px] float-left relative">
-        <img loading="lazy" class="w-full object-cover object-bottom  h-[450px]"
-          src="../public/imgs/pexels-photo-4142982.jpeg" alt="" srcset="">
+        <img class="w-full object-cover object-bottom  h-[450px]" src="../public/imgs/pexels-photo-4142982.jpg" alt=""
+          srcset="">
         <div
           class="absolute top-0 h-full w-full left-0 hover:bg-opacity-40 hover:bg-[#000]  z-20 duration-300 ease-in-out hover:cursor-pointer">
         </div>
       </div>
       <div class="w-[25%] lg:h-[450px] float-left relative">
-        <img loading="lazy" class="w-full object-cover object-bottom  h-[450px]"
-          src="../public/imgs/pexels-photo-4207892.jpeg" alt="" srcset="">
+        <img class="w-full object-cover object-bottom  h-[450px]" src="../public/imgs/pexels-photo-4207892.jpeg" alt=""
+          srcset="">
         <div
           class="absolute top-0 h-full w-full left-0 hover:bg-opacity-40 hover:bg-[#000]  z-20 duration-300 ease-in-out hover:cursor-pointer">
         </div>
       </div>
       <div class="w-[25%]   lg:h-[450px] float-left relative">
-        <img loading="lazy" class="w-full h-[450px] object-cover object-bottom"
-          src="../public/imgs/pexels-photo-905198.jpeg" alt="" srcset="">
+        <img class="w-full h-[450px] object-cover object-bottom" src="../public/imgs/pexels-photo-905198.jpeg" alt=""
+          srcset="">
         <div
           class="absolute top-0 h-full w-full left-0 hover:bg-opacity-40 hover:bg-[#000]  z-20 duration-300 ease-in-out hover:cursor-pointer">
         </div>
       </div>
       <div class="w-[25%] lg:h-[450px] float-left relative">
-        <img loading="lazy" class="w-full  object-cover object-bottom h-[450px]"
-          src="../public/imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
+        <img class="w-full  object-cover object-bottom h-[450px]" src="../public/imgs/1.jpeg" alt="" srcset="">
         <div
           class="absolute top-0 h-full w-full left-0 hover:bg-opacity-40 hover:bg-[#000]  z-20 duration-300 ease-in-out hover:cursor-pointer">
         </div>
@@ -284,23 +289,23 @@
       <div
         class="absolute lg:w-[514px] flex flex-col items-center justify-center w-full lg:flex-row lg:flex-wrap lg:top-[250px] lg:left-[350px]">
         <div class="projects shadow-md bg-[#b1c08b] flex flex-col items-center w-[300px] lg:w-[225px] m-4 p-12">
-          <img loading="lazy" class="w-[100px] h-[100px]" src="./imgs/project-management.png" alt="" srcset="">
-          <p class="font-bold text-2xl">PROJECTS</p>
+          <img class="w-[100px] h-[100px]" src="./imgs/project-management.png" alt="" srcset="">
+          <p class="font-bold text-2xl mt-1">PROJECTS</p>
           <p class="count font-extrabold text-4xl">100</p>
         </div>
         <div class="clients shadow-md bg-[#b1c08b] flex flex-col items-center w-[300px] lg:w-[225px] m-4 p-12">
-          <img loading="lazy" class="w-[100px] h-[100px]" src="./imgs/rating.png" alt="" srcset="">
-          <p class="font-bold text-2xl">PROJECTS</p>
+          <img class="w-[100px] h-[100px]" src="./imgs/rating.png" alt="" srcset="">
+          <p class="font-bold text-2xl mt-1">CLIENTS</p>
           <p class="count font-extrabold text-4xl">100</p>
         </div>
         <div class="team shadow-md bg-[#b1c08b] flex flex-col items-center w-[300px] lg:w-[225px] m-4 p-12">
-          <img loading="lazy" class="w-[100px] h-[100px]" src="./imgs/group.png" alt="" srcset="">
-          <p class="font-bold text-2xl">PROJECTS</p>
+          <img class="w-[100px] h-[100px]" src="./imgs/group.png" alt="" srcset="">
+          <p class="font-bold text-2xl">TEAM</p>
           <p class="count font-extrabold text-4xl">100</p>
         </div>
         <div class="awards shadow-md bg-[#b1c08b] flex flex-col items-center w-[300px] lg:w-[225px] m-4 p-12">
-          <img loading="lazy" class="w-[100px] h-[100px]" src="./imgs/award.png" alt="" srcset="">
-          <p class="font-bold text-2xl">PROJECTS</p>
+          <img class="w-[100px] h-[100px]" src="./imgs/award.png" alt="" srcset="">
+          <p class="font-bold text-2xl">AWARDS</p>
           <p class="count font-extrabold text-4xl">100</p>
         </div>
       </div>
@@ -326,8 +331,7 @@
           font-bold text-xl py-4" type="submit">SUBMIT</button>
         </form>
       </div>
-      <img
-        class="inline-block lg:w-[600px] h-[800px] lg:h-[800px] object-cover object-bottom  top-[] lg:top-0 relative z-10"
+      <img class="inline-block lg:w-[600px] h-[750px]  object-cover object-bottom   lg:top-[-20px] relative z-10"
         src="./imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
     </section>
   </main>
