--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="build.css" />
   <title>Prada Interior Design</title>
   <link rel="shortcut icon" href="imgs/p.png" type="image/x-icon">
 </head>
@@ -234,12 +234,13 @@
     </section>
     <section class="lg:p-40 lg:pr-96 text-center">
       <img
-        class="border-white border-[15px] shadow-md inline-block lg:w-[500px] lg:h-[600px] relative lg:left-[400px] lg:bottom-[200px] z-10"
+        class="  border-white border-[15px] shadow-md inline-block lg:w-[500px] lg:h-[600px] relative lg:left-[400px] lg:bottom-[600px] z-10  duration-1000 ease-in-out opacity-0"
         src="../public/imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
       <img
-        class="inline-block lg:w-[350px] shadow-md border-white border-[15px] relative z-20 lg:right-[330px] lg:top-[100px]"
+        class="inline-block lg:w-[350px] shadow-md border-white border-[15px] relative z-20 lg:right-[530px]  duration-1000 ease-in-out opacity-0"
         src="../public/imgs/FVG.jpg" alt="">
-      <div class="inline-block bg-gray-100 relative shadow-md lg:top-[100px] text-start px-20 py-32 w-[450px]">
+      <div
+        class="inline-block bg-gray-100 relative shadow-md lg:top-[100px] lg:right-[-200px] text-start px-20 py-32 w-[450px] duration-1000 ease-in-out opacity-0">
         <p class="font-bold text-4xl mb-10">Interior Studio</p>
         <p class=" text-gray-500">Elegance and Innovation in Every Design. Exquisite Creations to Elevate Your Space.
           Masterpieces Crafted with Attention to Detail. Transforming Your Vision into Reality. Unparalleled Excellence
@@ -291,22 +292,22 @@
         <div class="projects shadow-md bg-[#b1c08b] flex flex-col items-center w-[300px] lg:w-[225px] m-4 p-12">
           <img class="w-[100px] h-[100px]" src="./imgs/project-management.png" alt="" srcset="">
           <p class="font-bold text-2xl mt-1">PROJECTS</p>
-          <p class="count font-extrabold text-4xl">100</p>
+          <p class="section-6-card-count count font-extrabold text-4xl">0</p>
         </div>
         <div class="clients shadow-md bg-[#b1c08b] flex flex-col items-center w-[300px] lg:w-[225px] m-4 p-12">
           <img class="w-[100px] h-[100px]" src="./imgs/rating.png" alt="" srcset="">
           <p class="font-bold text-2xl mt-1">CLIENTS</p>
-          <p class="count font-extrabold text-4xl">100</p>
+          <p class="section-6-card-count count font-extrabold text-4xl">0</p>
         </div>
         <div class="team shadow-md bg-[#b1c08b] flex flex-col items-center w-[300px] lg:w-[225px] m-4 p-12">
           <img class="w-[100px] h-[100px]" src="./imgs/group.png" alt="" srcset="">
           <p class="font-bold text-2xl">TEAM</p>
-          <p class="count font-extrabold text-4xl">100</p>
+          <p class="section-6-card-count count font-extrabold text-4xl">0</p>
         </div>
         <div class="awards shadow-md bg-[#b1c08b] flex flex-col items-center w-[300px] lg:w-[225px] m-4 p-12">
           <img class="w-[100px] h-[100px]" src="./imgs/award.png" alt="" srcset="">
           <p class="font-bold text-2xl">AWARDS</p>
-          <p class="count font-extrabold text-4xl">100</p>
+          <p class="section-6-card-count count font-extrabold text-4xl">0</p>
         </div>
       </div>
       <img
