--- a/public/index.html
+++ b/public/index.html
@@ -8,20 +8,16 @@
   <link rel="shortcut icon" href="imgs/p.png" type="image/x-icon">
 </head>
 
-<body class="w-[100vw] font-Montserrat overflow-x-hidden  p-0 m-0">
-  <!-- header -->
-  <header
-    class="w-[100vw] shadow-md z-[9999] lg:fixed top-0 left-0 bg-white flex flex-col lg:flex-row items-center lg:justify-between py-6 lg:py-6 lg:px-40">
-    <!-- logo -->
+<body class=font-Montserrat">
+  <header class="w-[100vw] shadow-md z-[9999] lg:fixed lg:top-0 lg:left-0 bg-white flex flex-col lg:flex-row items-center
+  lg:justify-between py-6 lg:py-6 lg:px-40">
     <div>
       <a href="https://www.linkedin.com/in/abdelrhman-abdelmoaty/" target="_blank">
-        <h1 class="text-4xl font-bold hover:opacity-80 transition ease-in-out">PRADA
+        <h1 class="text-4xl font-bold hover:opacity-80 duration-500 ease-in-out">PRADA
         </h1>
       </a>
     </div>
-
-    <!-- social-media -->
-    <div class="mt-3 lg:mt-0  gap-4">
+    <div class="mt-3 lg:mt-0 gap-4">
       <ul class="flex items-center flex-wrap lg:w-auto w-[170px] justify-center">
         <li class="w-11 lg:w-9 mt-2 lg:mt-0 mr-1 hover:scale-110 transition ease-in-out duration-200">
           <a href="https://www.linkedin.com/in/abdelrhman-abdelmoaty/">
@@ -72,7 +68,7 @@
           </a>
         </li>
         <li
-          class="hamburger-menu hover:cursor-pointer w-12 mt-2 lg:mt-0 lg:pl-0 lg:w-9 mr-1 hover:scale-110 transition ease-in-out duration-200">
+          class="hamburger-menu hover:cursor-pointer w-12 mt-2 lg:mt-0 lg:pl-0 lg:w-9 mr-1 hover:scale-110 ease-in-out duration-200">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
@@ -81,14 +77,17 @@
         <ul class="menu fixed  top-0 right-[-256] ease-in-out duration-500 bg-white shadow-md  p-20 text-2xl">
           <img class="close absolute cursor-pointer top-5 right-5 w-5" src="imgs/close.png" alt="">
           <li>
+            <img class="w-[20px] inline-block mb-1" src="./imgs/home.png" alt="">
             <a href="https://www.linkedin.com/in/abdelrhman-abdelmoaty/" target="_blank"
               class="hover:opacity-80">Home</a>
           </li>
           <li>
+            <img class="w-[20px] inline-block mb-1" src="./imgs/info.png" alt="">
             <a href="https://www.linkedin.com/in/abdelrhman-abdelmoaty/" target="_blank"
               class="hover:opacity-80">About</a>
           </li>
           <li>
+            <img class="w-[20px] inline-block mb-1" src="./imgs/blog.png" alt="">
             <a href="https://www.linkedin.com/in/abdelrhman-abdelmoaty/" target="_blank"
               class="hover:opacity-80">Blog</a>
           </li>
@@ -99,7 +98,7 @@
   <!-- main -->
   <main class="overflow-x-hidden">
     <div
-      class="hero z-10 relative lg:mt-0 h-[500px] lg:h-[900px]  bg-cover bg-right-bottom lg:bg-bottom  bg-[url('../public/imgs/fgg-min.jpg')] ">
+      class="hero  z-10 relative lg:mt-0 h-[500px] lg:h-[900px]  bg-cover bg-right-bottom lg:bg-bottom  bg-[url('../public/imgs/fgg-min.jpg')] ">
       <div
         class="h-[500px] lg:h-[900px] bg-gray-950 bg-opacity-25  py-12 px-8 text-white lg:py-52 lg:pl-72 lg:pr-large   ">
         <h2 class="relative bottom-[200px] opacity-0 text-4xl lg:text-7xl lg:mb-8">Visit Our Inspirational Showrooms
