--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="build.css" />
+  <link rel="stylesheet" href="styles.css" />
   <title>Prada Interior Design</title>
   <link rel="shortcut icon" href="imgs/p.png" type="image/x-icon">
 </head>
@@ -318,7 +318,7 @@
     <section class="relative lg:px-72 lg:py-10 ">
       <div class="absolute lg:top-[45%] left-0 bg-[#b1c08b] lg:h-60 z-0 w-full"></div>
       <div
-        class="inline-block px-10 py-20 shadow-2xl relative lg:left-[150px] z-50 bg-white top-[100px] lg:top-[100px] w-[413px] lg:w-[550px]">
+        class="form inline-block px-10 py-20 shadow-2xl relative lg:left-[-150px] z-50 duration-1000 ease-in-out opacity-0 bg-white top-[100px] lg:top-[100px] w-[413px] lg:w-[550px]">
         <p class="font-bold text-3xl text-center mb-5">Contact Us</p>
         <form action="">
           <input placeholder="Enter your name"
@@ -331,7 +331,8 @@
           font-bold text-xl py-4" type="submit">SUBMIT</button>
         </form>
       </div>
-      <img class="inline-block lg:w-[600px] h-[750px]  object-cover object-bottom   lg:top-[-20px] relative z-10"
+      <img
+        class="inline-block lg:w-[600px] h-[750px]  object-cover object-bottom duration-1000 ease-in-out opacity-0 lg:top-[-20px] lg:right-[-200px] relative z-10"
         src="./imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
     </section>
   </main>
