--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="build.css" />
   <title>Prada Interior Design</title>
   <link rel="shortcut icon" href="imgs/p.png" type="image/x-icon">
 </head>
