--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body class=font-Montserrat">
-  <div id="preloader"><span>Loading</span></div>
+  <div id="preloader">
+    <div><span>Loading</span></div>
+  </div>
   <header class="w-[100vw] shadow-md z-[9999] lg:fixed lg:top-0 lg:left-0 bg-white flex flex-col lg:flex-row items-center
   lg:justify-between py-6 lg:py-6 lg:px-40">
     <div>
