--- a/public/index.html
+++ b/public/index.html
@@ -130,8 +130,8 @@
           success.
         </p>
         <button
-          class="mt-5 lg:mt-16 lg:text-2xl border-2 bg-white text-black border-[#b1c08b] py-2 px-16 font-semibold  hover:bg-[#b1c08b] hover:text-white transition duration-500 ease-in-out">Learn
-          more
+          class="mt-5 lg:mt-16 lg:text-2xl border-2 bg-white text-black border-[#b1c08b] py-2 px-16 font-semibold  hover:bg-[#b1c08b] hover:text-white transition duration-500 ease-in-out">LEARN
+          MORE
         </button>
       </div>
       <div class="py-8 px-8 bg-red relative flex justify-center items-center">
@@ -174,8 +174,8 @@
           is to provide you with the highest level of satisfaction, ensuring that your project is executed flawlessly.
         </p>
         <button
-          class="mt-5 lg:mt-16 lg:text-2xl border-2 bg-white text-black border-[#b1c08b] py-2 px-16 font-semibold  hover:bg-[#b1c08b] hover:text-white transition duration-500 ease-in-out">Learn
-          more
+          class="mt-5 lg:mt-16 lg:text-2xl border-2 bg-white text-black border-[#b1c08b] py-2 px-16 font-semibold  hover:bg-[#b1c08b] hover:text-white transition duration-500 ease-in-out">LEARN
+          MORE
         </button>
       </div>
     </section>
@@ -198,8 +198,8 @@
           you to explore your visions with unparalleled clarity and precision.
         </p>
         <button
-          class="mt-5 lg:mt-8 lg:text-2xl border-2 bg-white text-black border-[#b1c08b] py-2 px-16 font-semibold  hover:bg-[#b1c08b] hover:text-white transition duration-500 ease-in-out">Learn
-          more
+          class="mt-5 lg:mt-8 lg:text-2xl border-2 bg-white text-black border-[#b1c08b] py-2 px-16 font-semibold  hover:bg-[#b1c08b] hover:text-white transition duration-500 ease-in-out">LEARN
+          MORE
         </button>
       </div>
     </section>
