--- a/public/index.html
+++ b/public/index.html
@@ -236,10 +236,10 @@
     </section>
     <section class="lg:p-40 lg:pr-96 text-center">
       <img
-        class="  border-white border-[15px] shadow-md inline-block lg:w-[500px] lg:h-[600px] relative lg:left-[400px] lg:bottom-[600px] z-10  duration-1000 ease-in-out opacity-0"
+        class="  border-white border-[15px] shadow-md inline-block lg:w-[500px] lg:h-[600px] lg:relative lg:left-[400px] lg:bottom-[600px] z-10  duration-1000 ease-in-out opacity-0"
         src="../public/imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
       <img
-        class="inline-block lg:w-[350px] shadow-md border-white border-[15px] relative z-20 lg:right-[530px]  duration-1000 ease-in-out opacity-0"
+        class="inline-block lg:w-[350px] shadow-md border-white border-[15px] lg:relative z-20 lg:right-[530px]  duration-1000 ease-in-out opacity-0"
         src="../public/imgs/FVG.jpg" alt="">
       <div
         class="inline-block bg-gray-100 relative shadow-md lg:top-[100px] lg:right-[-200px] text-start px-20 py-32 w-[450px] duration-1000 ease-in-out opacity-0">
@@ -285,7 +285,8 @@
     <section class="relative py-5 lg:py-20">
       <div class="text-center ">
         <p class="font-bold text-5xl">About Design Studio</p>
-        <p class="my-5">Elevating Your Vision to Reality. Design Excellence Tailored to You. Transforming Concepts
+        <p class="my-5 lg:px-0 px-3">Elevating Your Vision to Reality. Design Excellence Tailored to You. Transforming
+          Concepts
           into Masterpieces.
           Your Dreams, Our Design.</p>
       </div>
@@ -321,7 +322,7 @@
     <section class="relative lg:px-72 lg:py-10 ">
       <div class="absolute lg:top-[45%] left-0 bg-[#b1c08b] lg:h-60 z-0 w-full"></div>
       <div
-        class="form inline-block px-10 py-20 shadow-2xl relative lg:left-[-150px] z-50 duration-1000 ease-in-out opacity-0 bg-white top-[100px] lg:top-[100px] w-[413px] lg:w-[550px]">
+        class="form inline-block px-10 py-20 shadow-2xl lg:relative lg:left-[-150px] z-50 duration-1000 ease-in-out opacity-0 bg-white top-[100px] lg:top-[100px] w-[413px] lg:w-[550px]">
         <p class="font-bold text-3xl text-center mb-5">Contact Us</p>
         <form action="">
           <input placeholder="Enter your name"
@@ -335,7 +336,7 @@
         </form>
       </div>
       <img
-        class="inline-block lg:w-[600px] h-[750px]  object-cover object-bottom duration-1000 ease-in-out opacity-0 lg:top-[-20px] lg:right-[-200px] relative z-10"
+        class="inline-block lg:w-[600px] lg:h-[750px]  object-cover object-bottom duration-1000 ease-in-out opacity-0 lg:top-[-20px] lg:right-[-200px] relative z-10"
         src="./imgs/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg" alt="" srcset="">
     </section>
   </main>
